# ChangeLog for app-portage/porticron
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/porticron/ChangeLog,v 1.7 2009/01/14 18:39:52 hollow Exp $

*porticron-0.2.2 (14 Jan 2009)

  14 Jan 2009; Benedikt Böhm <hollow@gentoo.org> -porticron-0.2.ebuild,
  porticron-0.2.1.ebuild, +porticron-0.2.2.ebuild:
  version bump: fixes #253352; fix SRC_URI

  02 Jan 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  porticron-0.2.1.ebuild:
  Add ~hppa and ~ppc keywords

  01 Jan 2009; Benedikt Böhm <hollow@gentoo.org> porticron-0.2.1.ebuild:
  fix HOMEPAGE and SRC_URI

  24 Nov 2008; Benedikt Böhm <hollow@gentoo.org> porticron-0.2.1.ebuild:
  fix source path

*porticron-0.2.1 (23 Nov 2008)

  23 Nov 2008; Benedikt Böhm <hollow@gentoo.org> -files/porticron-0.1,
  -porticron-0.1.ebuild, +porticron-0.2.1.ebuild:
  version bump

*porticron-0.2 (31 Oct 2008)

  31 Oct 2008; Benedikt Böhm <hollow@gentoo.org> +files/porticron,
  +porticron-0.2.ebuild:
  version bump wrt #244873

*porticron-0.1 (28 Oct 2008)

  28 Oct 2008; Benedikt Böhm <hollow@gentoo.org> +files/porticron-0.1,
  +metadata.xml, +porticron-0.1.ebuild:
  initial version
