@@ -1,7 +1,9 @@
 AUX porticron 37 RMD160 df2e946e429033018acdb60651b9ae9aab5dd908 SHA1 0a28fe256ea8ed216efc6076c00a265003c0edb1 SHA256 b73657a636bea04826aba60e8b1047e8c1ae939b7acbccee1cb07e5a32809061
 DIST porticron-0.2.1.tar.bz2 2089 RMD160 990277314cb3f39c1fba7c3bdd3302778604b93d SHA1 b473d2eae0531f61ec7ddcf4d6519cf5a358786c SHA256 623db85c8539807f056be6cb78a6865e22beef75e7d7b2f8b38d03c0b49e3c9b
 DIST porticron-0.2.2.tar.bz2 3142 RMD160 6b09692c3f5649dbd2ee931c9412a83f358a0eb4 SHA1 6921a2844acd85268882833b7f8be16008a6c6d9 SHA256 633df49879ad179c1ca6e06685c3a5849bd99c2b387f2a4197959db07417fb98
+DIST porticron-0.2.3.tar.bz2 3128 RMD160 033b158d7a46644bfda746e71ae5d46f1250e5fc SHA1 b6a0e311ca2e50a8d33d840101db68ca8a20d775 SHA256 32443a6ca0fe0b626f0381fa77bc8cbf3370a0c18951ae03a7124bee8e4db55b
 EBUILD porticron-0.2.1.ebuild 673 RMD160 064c2619fe1ccde94de3dfd0d9bb427c26fc3728 SHA1 241086b888f31e71dac0c7558878374a4dfec1a8 SHA256 42e8b5534f70acaad920d56c9a9da2c7f7ec7fd6559d45111d4e57eab860e270
 EBUILD porticron-0.2.2.ebuild 673 RMD160 d6c70cab932994601c0c382df4b41ed9195e1997 SHA1 924faf61407b5209eadf5d0dfa8db85b42b85548 SHA256 2e0cdfe21fa164d6aec827bd1e36f31d73a6e34e6c06fa80d5651e9cadf6cbeb
-MISC ChangeLog 1205 RMD160 0340867993c76483e1d2b31f104320b6fddd4c6a SHA1 100e35dbaf22b24d6a5ab5ed651cdcd4aa13dc00 SHA256 f3bb2a5265922b5384074e5cdb3bd47db57ef28095df20bfb4752fc49423ffc1
+EBUILD porticron-0.2.3.ebuild 673 RMD160 68ac860e27ebd47f039c07616d153b171e9aaed7 SHA1 17bdca69d4f807e174f24627130db7199088193f SHA256 b29ee09f93fcc1bc6a5e0fc7a63eefa4e7ab0a5c0f7b12a9dc0659d04af1d71c
+MISC ChangeLog 1343 RMD160 37d3a432c66d877c2ad22a349158c6dbb16d660e SHA1 aa1f3d59263b309b4544539af3f0a9935b3c7bc3 SHA256 b6863f560d8bbff38c321b0ded6bb39c43e54ecf6c58188f4e20c10c76a73651
 MISC metadata.xml 203 RMD160 3e084fe2d2456cf5385b1893d42cae081cb6d66b SHA1 8b11531445faec8884c51199a4f0c6b6a6603b05 SHA256 d008cb5048614a596655d76b72a60e947d66eb1d88c7ef39ce85568e801a9a66
