@@ -1,6 +1,11 @@
 # ChangeLog for app-portage/porticron
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/porticron/ChangeLog,v 1.7 2009/01/14 18:39:52 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/porticron/ChangeLog,v 1.8 2009/01/15 16:30:40 hollow Exp $
+
+*porticron-0.2.3 (15 Jan 2009)
+
+  15 Jan 2009; Benedikt Böhm <hollow@gentoo.org> +porticron-0.2.3.ebuild:
+  version bump: fixes #255049
 
 *porticron-0.2.2 (14 Jan 2009)
 
